--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "webcrawler",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node main.js",
     "test": "jest"
   },
   "author": "",
@@ -13,6 +13,7 @@
     "jest": "^29.4.1"
   },
   "dependencies": {
-    "jsdom": "^21.1.0"
+    "jsdom": "^21.1.0",
+    "node-fetch": "^3.3.0"
   }
 }
